--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
   "name": "vlad",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "homepage": "",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@emailjs/browser": "^3.10.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "babel": "^6.23.0",
+    "babel-loader": "^9.1.2",
+    "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
+    "express": "^4.18.2",
+    "file-loader": "^6.2.0",
+    "nodemailer": "^6.9.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-external-link": "^2.0.1",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
+    "save-dev": "^0.0.1-security",
+    "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3",
+    "webpack-cli": "^5.0.1"
   }
 }
