--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vlad",
   "version": "1.0.0",
-  "homepage": "",
+  "homepage": "https://Vlad-auvray.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
